--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "mqa",
   "version": "0.1.0",
   "homepage": "https://akarshc.github.io/trivia",
-  "private": true,
+  "private": false,
   "dependencies": {
-    "gh-pages": "^2.2.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
@@ -25,5 +24,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
+  }
 }
