--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,8 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: npm run deploy
+    - run: git config --global user.email "akarshcp@gmail.com"
+    - run: git config --global user.name "akarshc"
       env:
         CI: false
 
