--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: git config --global credential.helper wincred
     - run: git config --global user.name "akarshc"
     - run: git config --global user.email "akarshc1997@gmail.com"
     - run: npm install
